          and isValid(char).   
        - DomRepresentation now has a protected createTransformer()
          method that can be overridden to customize the properties of
          the JAXP Transformer. Contributed by Rob Heittman.
        - All getters in Reference returning URI encoded string now
          have an additional method taking a 'decode' parameter. 
          Suggested by Paul J. Lucas.           
    - NRE and Extension Enhancements
        - Made the ServerServlet.create*() method protected instead of 
          public.
        - Added a ServerServlet.createCall() and createWarClient() 
          methods for easier subclassing by the XDB extension. 
          Some contributions from Marcelo Ochoa.
        - Added new javax.annotation library for the JAX-RS extension.
        - Added ServerServlet.getClass() method to facilitate 
          subclassing by the XDB extension. Suggested by Marcelo Ochoa.
        - Added new constructors to JiBX extension not requiring the
          binding name parameter.
        - Distributed experimental JAX-RS extension implementing the
          JSR-311 draft specification. Contributed by Stephan Koops.
        - All HTTP server connectors now expose the client certificates
          using the "org.restlet.https.clientCertificates" request 
          attribute. Contributed by Bruno Harbulot.
    - Misc
        - Reformatting of the changes log. Contributed by Avi Flax.
        - All Component subclasses now use a main method that throws 
          exceptions and takes a string array as parameter.
        - More precise log message for a Resource with no variant.
        - Otpimized Eclipse dependencies by leveraging reexport option.
        - Updated Spring to version 2.5.2.
        - Improved handling of connectors created without a protocol.
          Contributed by Avi Flax.
        - Representations returned by the CLAP connector now have their