@@ -18,11 +18,16 @@
 
 package org.restlet.test;
 
+import java.io.ByteArrayOutputStream;
+
 import junit.framework.TestCase;
 
+import org.restlet.Component;
 import org.restlet.Transformer;
+import org.restlet.data.MediaType;
 import org.restlet.resource.Representation;
 import org.restlet.resource.StringRepresentation;
+import org.restlet.resource.TransformRepresentation;
 
 /**
  * Test case for the Transformer class.
@@ -30,37 +35,97 @@ import org.restlet.resource.StringRepresentation;
  * @author Jerome Louvel (contact@noelios.com)
  */
 public class TransformerTestCase extends TestCase {
+    class FailureTracker {
+        boolean allOk = true;
+
+        final StringBuffer trackedMessages = new StringBuffer();
+
+        void report() {
+            if (!allOk) {
+                fail("TRACKER REPORT: \n" + trackedMessages.toString());
+            }
+        }
+
+        void trackFailure(String message) {
+            System.err.println(message);
+            trackedMessages.append(message + "\n");
+            allOk = false;
+        }
+
+        void trackFailure(String message, int index, Throwable e) {
+            e.printStackTrace();
+            trackFailure(message + " " + index + ": " + e.getMessage());
+        }
+    }
+
     public static void main(String[] args) {
         try {
             new TransformerTestCase().testTransform();
+            new TransformerTestCase().testParallelTransform();
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
+    final String output = "<?xml version=\"1.0\" encoding=\"UTF-8\"?><buyer>cust123</buyer>23.45";
+
+    // Create a source XML document
+    final Representation source = new StringRepresentation(
+            "<?xml version=\"1.0\"?>" + "<purchase id=\"p001\">"
+                    + "<customer db=\"cust123\"/>" + "<product db=\"prod345\">"
+                    + "<amount>23.45</amount>" + "</product>" + "</purchase>",
+            MediaType.TEXT_XML);
+
+    // Create a transform XSLT sheet
+    final Representation xslt = new StringRepresentation(
+            "<?xml version=\"1.0\"?>"
+                    + "<xsl:transform xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" version=\"1.0\">"
+                    + "<xsl:template match =\"customer\">"
+                    + "<buyer><xsl:value-of select=\"@db\"/></buyer>"
+                    + "</xsl:template>" + "</xsl:transform>",
+            MediaType.TEXT_XML);
+
+    public void testParallelTransform() throws Exception {
+        Component comp = new Component();
+        final TransformRepresentation tr = new TransformRepresentation(comp
+                .getContext(), source, xslt);
+        final FailureTracker tracker = new FailureTracker();
+
+        int testVolume = 5000;
+        Thread[] parallelTransform = new Thread[testVolume];
+        for (int i = 0; i < parallelTransform.length; i++) {
+            final int index = i;
+            parallelTransform[i] = new Thread() {
+
+                @Override
+                public void run() {
+                    try {
+                        ByteArrayOutputStream out = new ByteArrayOutputStream();
+                        tr.write(out);
+                        String result = out.toString();
+                        assertEquals(output, result);
+                        out.close();
+
+                    } catch (Throwable e) {
+                        tracker.trackFailure(
+                                "Exception during write in thread ", index, e);
+                    }
+                }
+            };
+        }
+
+        for (Thread pt : parallelTransform) {
+            pt.start();
+        }
+
+        tracker.report();
+    }
+
     public void testTransform() throws Exception {
-        // Create a source XML document
-        Representation source = new StringRepresentation(
-                "<?xml version=\"1.0\"?>" + "<purchase id=\"p001\">"
-                        + "<customer db=\"cust123\"/>"
-                        + "<product db=\"prod345\">" + "<amount>23.45</amount>"
-                        + "</product>" + "</purchase>");
-
-        // Create a transform XSLT sheet
-        Representation xslt = new StringRepresentation(
-                "<?xml version=\"1.0\"?>"
-                        + "<xsl:transform xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" version=\"1.0\">"
-                        + "<xsl:template match =\"customer\">"
-                        + "<buyer><xsl:value-of select=\"@db\"/></buyer>"
-                        + "</xsl:template>" + "</xsl:transform>");
-
         Transformer transformer = new Transformer(Transformer.MODE_REQUEST,
                 xslt);
         String result = transformer.transform(source).getText();
 
-        assertEquals(
-                "<?xml version=\"1.0\" encoding=\"UTF-8\"?><buyer>cust123</buyer>23.45",
-                result);
+        assertEquals(output, result);
     }
-
 }
