@@ -30,7 +30,9 @@ Changes log
           the JAXP Transformer. Contributed by Rob Heittman.
         - All getters in Reference returning URI encoded string now
           have an additional method taking a 'decode' parameter. 
-          Suggested by Paul J. Lucas.           
+          Suggested by Paul J. Lucas.
+        - TransformRepresentation can now be reused multiple times by 
+          multiple threads in parallel. Contributed by Marc Portier.         
     - NRE and Extension Enhancements
         - Made the ServerServlet.create*() method protected instead of 
           public.
